--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#fffacd",
+  "theme_color": "#000000",
   "description": "Sol-Ra.dio",
   "icons": [
     {
