--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "Sol-Ra.dio",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
+  "background_color": "#000000",
+  "theme_color": "#fffacd",
   "description": "Sol-Ra.dio",
   "icons": [
     {
